--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -11,6 +11,7 @@
     "connect": "Connect",
     "connecting": "Connecting",
     "copy": "Copy",
+    "create": "Create",
     "delete": "Delete",
     "disconnect": "Disconnect",
     "dismiss": "Dismiss",
@@ -40,6 +41,7 @@
     "scroll_to_top": "Scroll to top",
     "search": "Search",
     "send": "Send",
+    "share": "Share",
     "start": "Start",
     "starting": "Starting",
     "stop": "Stop",
@@ -188,6 +190,7 @@
     "remove_folder": "Are you sure you want to permanently delete this folder?",
     "remove_history": "Are you sure you want to permanently delete all history?",
     "remove_request": "Are you sure you want to permanently delete this request?",
+    "remove_shared_request": "Are you sure you want to permanently delete this shared request?",
     "remove_team": "Are you sure you want to delete this team?",
     "remove_telemetry": "Are you sure you want to opt-out of Telemetry?",
     "request_change": "Are you sure you want to discard current request, unsaved changes will be lost.",
@@ -229,6 +232,7 @@
     "profile": "Login to view your profile",
     "protocols": "Protocols are empty",
     "schema": "Connect to a GraphQL endpoint to view schema",
+    "shared_requests": "Shared requests are empty",
     "shortcodes": "Shortcodes are empty",
     "subscription": "Subscriptions are empty",
     "team_name": "Team name empty",
@@ -416,6 +420,7 @@
     "collections": "Collections",
     "confirm": "Confirm",
     "edit_request": "Edit Request",
+    "share_request":"Share Request",
     "import_export": "Import / Export"
   },
   "mqtt": {
@@ -491,7 +496,6 @@
       "structured": "Structured",
       "text": "Text"
     },
-    "copy_link": "Copy link",
     "different_collection": "Cannot reorder requests from different collections",
     "duplicated": "Request duplicated",
     "duration": "Duration",
@@ -524,6 +528,7 @@
     "saved": "Request saved",
     "share": "Share",
     "share_description": "Share Hoppscotch with your friends",
+    "share_request": "Share Request",
     "stop": "Stop",
     "title": "Request",
     "type": "Request type",
@@ -603,6 +608,20 @@
     "verified_email": "Verified email",
     "additional": "Additional Settings",
     "verify_email": "Verify email"
+  },
+  "shared_requests":{
+    "button":"Button",
+    "button_info": "Create a 'Run in Hoppscotch' button for your website, blog or a README.",
+    "customize": "Customize",
+    "creating_widget": "Creating widget",
+    "deleted":"Shared request deleted",
+    "description": "Select a widget, you can change and customize this later",
+    "embed":"Embed",
+    "embed_info": "Add a mini 'Hoppscotch API Playground' to your website, blog or documentation.",
+    "link":"Link",
+    "link_info": "Create a shareable link to share with anyone on the internet with view access.",
+    "open_new_tab": "Open in new tab",
+    "preview":"Preview"
   },
   "shortcodes": {
     "actions": "Actions",
@@ -840,6 +859,7 @@
     "queries": "Queries",
     "query": "Query",
     "schema": "Schema",
+    "shared_requests": "Shared Requests",
     "socketio": "Socket.IO",
     "sse": "SSE",
     "tests": "Tests",
