refactor: rearranged shared requests related i18n strings in ascending order

--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -20,23 +20,23 @@
     "viewer": "VIEWER"
   },
   "sharedRequests": {
+    "clear_filter": "Clear Filter",
+    "confirm_request_deletion": "Confirm deletion of the selected shared request?",
+    "copy": "Copy",
+    "created_on": "Created On",
+    "delete": "Delete",
     "email": "Email",
+    "filter": "Filter",
+    "filter_by_email": "Filter by email",
     "id": "ID",
+    "load_list_error": "Unable to load shared requests list",
+    "no_requests": "No shared requests found",
+    "open_request": "Open Request",
     "properties": "Properties",
     "request": "Request",
     "title": "Shared Requests",
     "url": "URL",
-    "created_on":"Created On",
-    "copy":"Copy",
-    "open_request":"Open Request",
-    "delete":"Delete",
-    "filter":"Filter",
-		"load_list_error": "Unable to load shared requests list",
-		"no_requests":"No shared requests found",
-    "confirm_request_deletion": "Confirm deletion of the selected shared request?",
-    "show_more": "Show more",
-    "filter_by_email": "Filter by email",
-    "clear_filter": "Clear Filter"
+    "show_more": "Show more"
   },
   "state": {
     "add_user_failure": "Failed to add user to the team!!",
