--- a/packages/hoppscotch-common/locales/fr.json
+++ b/packages/hoppscotch-common/locales/fr.json
@@ -881,7 +881,7 @@
     "duplicate": "Duplicate Tab",
     "environments": "Environments",
     "headers": "En-têtes",
-    "history": "Histoire",
+    "history": "Historique",
     "mqtt": "MQTT",
     "parameters": "Paramètres",
     "pre_request_script": "Script de pré-requête",
