refactor: better i18n strings and UI improvements

--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -167,14 +167,13 @@
     "no_invite": "No invited users found",
     "no_users": "No users found",
     "not_found": "User not found",
+    "no_shared_requests": "No shared requests created by the user",
     "remove_admin_privilege": "Remove Admin Privilege",
     "remove_admin_status": "Remove Admin Status",
     "send_invite": "Send Invite",
     "show_more": "Show more",
-    "shared_requests": "User's shared requests",
     "uid": "UID",
     "unnamed": "(Unnamed User)",
-    "user_details": "User details",
     "user_not_found": "User not found in the infra!!",
     "users": "Users",
     "valid_email": "Please enter a valid email address"
