refactor: updated en.json to follow alphabetical order

--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -34,9 +34,9 @@
     "open_request": "Open Request",
     "properties": "Properties",
     "request": "Request",
+    "show_more": "Show more",
     "title": "Shared Requests",
-    "url": "URL",
-    "show_more": "Show more"
+    "url": "URL"
   },
   "state": {
     "add_user_failure": "Failed to add user to the team!!",
@@ -50,15 +50,15 @@
     "continue_github": "Continue with Github",
     "continue_google": "Continue with Google",
     "continue_microsoft": "Continue with Microsoft",
+    "copied_to_clipboard": "Copied to clipboard",
     "create_team_failure": "Failed to create team!!",
     "create_team_success": "Team created successfully!!",
-    "copied_to_clipboard": "Copied to clipboard",
+    "delete_request_failure": "Shared Request deletion failed!!",
+    "delete_request_success": "Shared Request deleted successfully!!",
     "delete_team_failure": "Team deletion failed!!",
     "delete_team_success": "Team deleted successfully!!",
     "delete_user_failure": "User deletion failed!!",
     "delete_user_success": "User deleted successfully!!",
-    "delete_request_failure": "Shared Request deletion failed!!",
-    "delete_request_success": "Shared Request deleted successfully!!",
     "email": "Email",
     "email_failure": "Failed to send invitation",
     "email_signin_failure": "Failed to login with Email",
@@ -148,13 +148,14 @@
     "confirm_user_to_admin": "Do you want to make this user into an admin?",
     "created_on": "Created On",
     "date": "Date",
-    "details": "Details",
     "delete": "Delete",
     "delete_user": "Delete User",
+    "details": "Details",
     "email": "Email",
     "email_address": "Email Address",
     "id": "User ID",
     "invalid_user": "Invalid User",
+    "invite_load_list_error": "Unable to Load Invited Users List",
     "invite_user": "Invite User",
     "invited_on": "Invited On",
     "invited_users": "Invited Users",
@@ -162,12 +163,11 @@
     "load_info_error": "Unable to load user info",
     "load_list_error": "Unable to Load Users List",
     "make_admin": "Make admin",
-    "invite_load_list_error": "Unable to Load Invited Users List",
     "name": "Name",
     "no_invite": "No invited users found",
+    "no_shared_requests": "No shared requests created by the user",
     "no_users": "No users found",
     "not_found": "User not found",
-    "no_shared_requests": "No shared requests created by the user",
     "remove_admin_privilege": "Remove Admin Privilege",
     "remove_admin_status": "Remove Admin Status",
     "send_invite": "Send Invite",
