Add new variable

--- a/packages/hoppscotch-common/locales/ru.json
+++ b/packages/hoppscotch-common/locales/ru.json
@@ -1,5 +1,6 @@
 {
   "action": {
+    "add": "Добавить",
     "autoscroll": "Автоскрол",
     "cancel": "Отменить",
     "choose_file": "Выберите файл",
@@ -52,11 +53,30 @@
   },
   "add": {
     "new": "Добавить новое",
-    "star": "Добавить в избранное"
+    "star": "Добавить в избранное",
+  },
+  "cookies": {
+    "modal": {
+      "new_domain_name": "Добавить новый домен",
+      "set": "Установить cookie",
+      "cookie_string": "Cookie параметры",
+      "enter_cookie_string": "Введите cookie параметры сюда",
+      "cookie_name": "Имя",
+      "cookie_value": "Значение",
+      "cookie_path": "Путь",
+      "cookie_expires": "Истекает",
+      "managed_tab": "Managed",
+      "raw_tab": "Raw",
+      "interceptor_no_support": "Ваш текущий Перехватчик не поддерживает работу с cookie. Выберите другой Перехватчик и попробуйте еще раз.",
+      "empty_domains": "Список доменов пуст",
+      "empty_domain": "Нужно заполнить домен",
+      "no_cookies_in_domain": "Никаких cookie не установлено для этого домена"
+    }
   },
   "app": {
     "chat_with_us": "Связаться с нами",
     "contact_us": "Свяжитесь с нами",
+    "cookies": "Cookies",
     "copy": "Копировать",
     "copy_user_id": "Копировать токен пользователя",
     "developer_option": "Настройки разработчика",
@@ -112,18 +132,34 @@
   },
   "authorization": {
     "generate_token": "Сгенерировать токен",
+    "graphql_headers": "Authorization Headers are sent as part of the payload to connection_init",
     "include_in_url": "Добавить в URL",
     "learn": "Узнать больше",
     "pass_key_by": "Pass by",
     "password": "Пароль",
     "token": "Токен",
     "type": "Метод авторизации",
-    "username": "Имя пользователя"
+    "username": "Имя пользователя",
+    "oauth": {
+      "token_generation_oidc_discovery_failed": "Failure on token generation: OpenID Connect Discovery Failed",
+      "something_went_wrong_on_token_generation": "Something went wrong on token generation",
+      "redirect_auth_server_returned_error": "Auth Server returned an error state",
+      "redirect_no_auth_code": "No Authorization Code present in the redirect",
+      "redirect_invalid_state": "Invalid State value present in the redirect",
+      "redirect_no_token_endpoint": "No Token Endpoint Defined",
+      "redirect_no_client_id": "No Client ID defined",
+      "redirect_no_client_secret": "No Client Secret Defined",
+      "redirect_no_code_verifier": "No Code Verifier Defined",
+      "redirect_auth_token_request_failed": "Request to get the auth token failed",
+      "redirect_auth_token_request_invalid_response": "Invalid Response from the Token Endpoint when requesting for an auth token",
+      "something_went_wrong_on_oauth_redirect": "Something went wrong during OAuth Redirect"
+    }
   },
   "collection": {
     "created": "Коллекция создана",
     "different_parent": "Нельзя сортировать коллекцию с разной родительской коллекцией",
     "edit": "Редактировать коллекцию",
+    "import_or_create": "Вы можете импортировать существующую или создать новую коллекцию",
     "invalid_name": "Укажите допустимое название коллекции",
     "invalid_root_move": "Коллекция уже в корне",
     "moved": "Перемещено успешно",
@@ -143,7 +179,7 @@
   },
   "confirm": {
     "close_unsaved_tab": "Вы уверены что хотите закрыть эту вкладку?",
-    "close_unsaved_tabs": "ВЫ уверены что хотите закрыть все эти вкладки? Несохранённые данные {count} вкладок будут утеряны.",
+    "close_unsaved_tabs": "Вы уверены что хотите закрыть все эти вкладки? Несохранённые данные {count} вкладок будут утеряны.",
     "exit_team": "Вы точно хотите покинуть эту команду?",
     "logout": "Вы действительно хотите выйти?",
     "remove_collection": "Вы уверены, что хотите навсегда удалить эту коллекцию?",
@@ -209,13 +245,14 @@
     "empty_variables": "No variables",
     "global": "Global",
     "global_variables": "Global variables",
+    "import_or_create": "Импортировать или создать новое окружение",
     "invalid_name": "Укажите допустимое имя для окружения",
-    "list": "Environment variables",
+    "list": "Переменные окружения",
     "my_environments": "Мои окружения",
     "name": "Name",
     "nested_overflow": "максимальный уровень вложения переменных окружения - 10",
     "new": "Новая среда",
-    "no_active_environment": "No active environment",
+    "no_active_environment": "Нет активных окружений",
     "no_environment": "Нет окружения",
     "no_environment_description": "Не выбрано окружение, выберите что делать с переменными.",
     "quick_peek": "Environment Quick Peek",
@@ -234,6 +271,7 @@
   "error": {
     "browser_support_sse": "Похоже, в этом браузере нет поддержки событий, отправленных сервером.",
     "check_console_details": "Подробности смотрите в журнале консоли.",
+    "check_how_to_add_origin": "Check how you can add an origin",
     "curl_invalid_format": "cURL неправильно отформатирован",
     "danger_zone": "Опасная зона",
     "delete_account": "Вы являетесь владельцем этой команды:",
@@ -249,9 +287,12 @@
     "json_prettify_invalid_body": "Не удалось определить недопустимое тело, устранить синтаксические ошибки json и повторить попытку.",
     "network_error": "Похоже, возникла проблема с соединением. Попробуйте еще раз.",
     "network_fail": "Не удалось отправить запрос",
+    "no_collections_to_export": "Нечего экспортировать. Для начала нужно создать коллекцию.",
     "no_duration": "Без продолжительности",
+    "no_environments_to_export": "Нечего экспортировать. Для начала нужно создать переменные окружения.",
     "no_results_found": "Совпадения не найдены",
     "page_not_found": "Эта страница не найдена",
+    "please_install_extension": "Please install the extension and add origin to the extension.",
     "proxy_error": "Proxy error",
     "script_fail": "Не удалось выполнить сценарий предварительного запроса",
     "something_went_wrong": "Что-то пошло не так",
@@ -315,7 +356,7 @@
   },
   "import": {
     "collections": "Импортировать коллекции",
-    "curl": "Импортировать cURL",
+    "curl": "Импортировать из cURL",
     "failed": "Ошибка импорта",
     "from_gist": "Импорт из Gist",
     "from_gist_description": "Импортировать через Gist URL",
@@ -453,9 +494,10 @@
     "different_collection": "Нельзя изменять порядок запросов из разных коллекций",
     "duplicated": "Запрос скопирован",
     "duration": "Продолжительность",
-    "enter_curl": "Введите cURL",
+    "enter_curl": "Введите сюда команду cURL",
     "generate_code": "Сгенерировать код",
     "generated_code": "Сгенерированный код",
+    "go_to_authorization_tab": "Go to Authorization",
     "header_list": "Список заголовков",
     "invalid_name": "Укажите имя для запроса",
     "method": "Методика",
@@ -472,7 +514,7 @@
     "payload": "Полезная нагрузка",
     "query": "Запрос",
     "raw_body": "Необработанное тело запроса",
-    "rename": "Rename Request",
+    "rename": "Переименость запрос",
     "renamed": "Запрос переименован",
     "run": "Запустить",
     "save": "Сохранить",
@@ -600,13 +642,13 @@
       "delete_method": "Выберите метод DELETE",
       "get_method": "Выберите метод GET",
       "head_method": "Выберите метод HEAD",
-      "import_curl": "Import cURL",
+      "import_curl": "Импортировать из cURL",
       "method": "Методика",
       "next_method": "Выберите следующий метод",
       "post_method": "Выберите метод POST",
       "previous_method": "Выбрать предыдущий метод",
       "put_method": "Выберите метод PUT",
-      "rename": "Rename Request",
+      "rename": "Переименовать запрос",
       "reset_request": "Сбросить запрос",
       "save_request": "Сохарнить запрос",
       "save_to_collections": "Сохранить в коллекции",
@@ -743,9 +785,11 @@
     "disconnected_from": "Отключено от {name}",
     "docs_generated": "Документация создана",
     "download_started": "Скачивание началось",
+    "download_failed": "Download failed",
     "enabled": "Включено",
     "file_imported": "Файл импортирован",
     "finished_in": "Завершено через {duration} мс",
+    "hide": "Hide",
     "history_deleted": "История удалена",
     "linewrap": "Обернуть линии",
     "loading": "Загрузка...",
@@ -756,6 +800,7 @@
     "published_error": "Что-то пошло не так при попытке опубликовать сообщение в топик {topic}: {message}",
     "published_message": "Опубликовано сообщение: {message} в топик: {topic}",
     "reconnection_error": "Не удалось переподключиться",
+    "show": "Show",
     "subscribed_failed": "Не удалось подписаться на топик: {topic}",
     "subscribed_success": "Успешно подписался на топик: {topic}",
     "unsubscribed_failed": "Не удалось отписаться от топика: {topic}",
@@ -777,8 +822,8 @@
   "tab": {
     "authorization": "Авторизация",
     "body": "Тело",
-    "close": "Close Tab",
-    "close_others": "Close other Tabs",
+    "close": "Закрыть вкладку",
+    "close_others": "Закрыть остальные вкладки",
     "collections": "Коллекции",
     "documentation": "Документация",
     "duplicate": "Duplicate Tab",
@@ -843,6 +888,8 @@
     "not_found": "Команда не найдена, свяжитесь с владельцем команды",
     "not_valid_viewer": "У Вас нет прав просматривать это. Свяжитесь с руководителем команды.",
     "parent_coll_move": "Не удалось переместить коллекцию в дочернюю",
+    "success_invites": "Принятые приглашения",
+    "failed_invites": "Непринятые приглашения",
     "pending_invites": "Ожидающие приглашения",
     "permissions": "Разрешения",
     "same_target_destination": "Таже цель и конечная точка",
