--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -432,6 +432,7 @@
     "close_unsaved_tab": "You have unsaved changes",
     "collections": "Collections",
     "confirm": "Confirm",
+    "customize_request": "Customize Request",
     "edit_request": "Edit Request",
     "share_request":"Share Request",
     "import_export": "Import / Export"
@@ -636,6 +637,7 @@
     "embed_info": "Add a mini 'Hoppscotch API Playground' to your website, blog or documentation.",
     "link":"Link",
     "link_info": "Create a shareable link to share with anyone on the internet with view access.",
+    "modified": "Shared request modified",
     "not_found":"Shared request not found",
     "open_new_tab": "Open in new tab",
     "preview":"Preview",
