feat: introduced mail configs to the server configurations

--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -7,7 +7,7 @@
     "open_navigation": "Open Navigation"
   },
   "config": {
-    "enable_auth_provider": "Enable {provider} Auth Provider"
+    "enable_auth_provider": "Enable {provider} as Auth Provider"
   },
   "metrics": {
     "dashboard": "Dashboard",
